--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,10 +27,10 @@ services:
     container_name: ecomm_db
     restart: always
     environment:
-      MYSQL_DATABASE: ${DB_DATABASE:-ecomm}
-      MYSQL_USER: ${DB_USERNAME:-ecomm}
-      MYSQL_PASSWORD: ${DB_PASSWORD:-secret}
-      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD:-root}
+      MYSQL_DATABASE: ecomm
+      MYSQL_USER: ecomm
+      MYSQL_PASSWORD: secret
+      MYSQL_ROOT_PASSWORD: root
     volumes:
       - ecomm_db_data:/var/lib/mysql
     ports:
