--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,18 +33,9 @@ services:
       MYSQL_ROOT_PASSWORD: root
     volumes:
       - ecomm_db_data:/var/lib/mysql
+      - ./docker/mysql/my.cnf:/etc/mysql/my.cnf:ro
     ports:
       - "3307:3306"        # avoid clashing w/local MySQL; adjust as desired
-
-  # Optional: Node build container
-  node:
-    image: node:20-alpine
-    container_name: ecomm_node
-    working_dir: /var/www/html
-    volumes:
-      - ./:/var/www/html
-    command: sh -c "npm install && npm run dev"
-    # remove command or convert to manual exec for on-demand builds
 
 volumes:
   ecomm_db_data:
